@@ -39,9 +39,8 @@ def get_abspath(globals_namespace, local_path):
         else:
             mpath = mname
 
-    # XXX This may not work on Windows, we should preserve the drive.
-    mpath = os.path.splitdrive(mpath)[1]
-    mpath = os.path.join(mpath, local_path)
+    drive, mpath = os.path.splitdrive(mpath)
+    mpath = drive + os.path.join(mpath, local_path)
 
     # Make it working with Windows. Internally we use always the "/".
     if os.path.sep == '\\':
