@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-07-13 16:14:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-94
+
+    Summary:
+      fix "get_abspath" for Windows
+    Revision:
+      itools--main--0.9--patch-94
+
+
+    modified files:
+     Changelog __init__.py
+
+
 2005-06-24 12:51:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-93
 
     Summary:
